--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.GerenciadorDeMatriculas"
         tools:targetApi="31">
         <activity
-            android:name=".screens.AddAluno"
+            android:name=".screens.AddActivity"
             android:exported="false" />
         <activity
             android:name=".screens.MainActivity"
